titles contrast correction

--- a/style.css
+++ b/style.css
@@ -66,7 +66,7 @@ header nav a {
   font-weight: bold;
   margin-top: 10rem;
   text-align: center;
-  color: white;
+  color: #000000;
   text-transform: uppercase;
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
 }
@@ -76,7 +76,7 @@ header nav a {
   font-weight: bold;
   margin-top: 10rem;
   text-align: center;
-  color: white;
+  color: #000000;
   text-transform: uppercase;
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
 }
